PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Fix (modernize) support for the keycast package: it now provides 4 different
  commands, with one that uses a frame and therefore can only be used in Emacs
  running in GUI mode.  Add the following key bindings for it:
  - ~<f11> ? k a m~ for *keycast-mode-line-mode*
  - ~<f11> ? k a h~ for *keycast-header-line-mode*
  - ~<f11> ? k a t~ for *keycast-tab-bar-mode*
  - ~<f11> ? k a f~ for *keycast-log-mode* , now only available when Emacs is
    used in GUI mode because this mode prints the logged events inside a
    separate Emacs frame.
- PEL can now install Emacs Lisp files hosted in Gitlab projects using the *pel-install-gitlab-file* function.
- Improved support for the emacs-ssh-file-modes making Emacs aware of the format of the SSH /known_hosts/ and /authorized_keys/ files.
  This is activated by the *pel-use-emacs-ssh-file-modes* user-option.
  - PEL now use my fork of the original project which modernizes the code and fixes font locking issues that shows under the latest Emacs.
  - Add the ~<f12>~ key prefix binding top the two modes allowing quick access to the new [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/ssh-files.pdf][ssh PDF]] help file and to the
    PEL and mode specific customization buffers.
  - also add the ~<f12> =~ key binding to the *ssh-abbreviated-keys-mode* command.
- Add logic to native compile Emacs lisp files downloaded into PEL =~/.emacs.d/utils=
  directory.  The new pel-comp.el file holds the logic.
- Add key bindings for Emacs text transpose commands:
  - ~<f11> t t r~ bound to *transpose-regions*
  - ~<f11> t t W~ bound to *subword-transpose*
- Add PEL support for the VHDL hardware description language when
  *pel-use-vhdl* is activated (set to t).  This is a early implementation.
  When activated, PEL provides the PEL conventional keys in *vhdl-mode*
  buffers: